Created page with ":* [[Image:Sketcher_CreateCircle.svg|32px]] [[Sketcher_CreateCircle|Kruh ze středu]]: Vytvoří kruh podle jeho středu a bodu na kružnici. {{Version|1.0}}: Nebo ze tří bodů podél kružnice."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -129,9 +129,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfHyperbola.svg&amp;filetimestamp=20240101170323&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfHyperbola.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfHyperbola.html" title="Sketcher CreateArcOfHyperbola">Hyperbolick&yacute; oblouk</a>: Vytvo&#345;&iacute; hyperbolick&yacute; oblouk.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfParabola.svg&amp;filetimestamp=20240101170333&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfParabola.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfParabola.html" title="Sketcher CreateArcOfParabola">Parabolick&yacute; oblouk</a>: Vytvo&#345;&iacute; parabolick&yacute; oblouk.</li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompCreateConic"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateCircle.svg&amp;filetimestamp=20240101085932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it kruh/elipsu:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateCircle.svg&amp;filetimestamp=20240101085932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Circle From Center</a>: Creates a circle from its center and a point along the circle. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Or from three points along the circle.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateCircle.svg&amp;filetimestamp=20240101085932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Kruh ze st&#345;edu</a>: Vytvo&#345;&iacute; kruh podle jeho st&#345;edu a bodu na kru&#382;nici. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Nebo ze t&#345;&iacute; bod&#367; pod&eacute;l kru&#382;nice.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Create3PointCircle.svg&amp;filetimestamp=20240101085716&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Create3PointCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Create3PointCircle.html" title="Sketcher Create3PointCircle">Circle From 3 Points</a>: Creates a circle from three points along the circle. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: This is the same tool as <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Circle From Center</a> but with a different initial mode.</li></ul></dd></dl>
 </div>
@@ -754,13 +752,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113540
+Cached time: 20260118113702
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.443 seconds
-Real time usage: 0.719 seconds
-Preprocessor visited node count: 1528/1000000
+CPU time usage: 0.484 seconds
+Real time usage: 0.787 seconds
+Preprocessor visited node count: 1527/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -770,19 +768,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.462      1 -total
- 18.85%   10.829      1 Template:Sketcher_Tools_navi/cs
- 13.02%    7.484      1 Template:PropertyView
- 12.50%    7.184      1 Template:Userdocnavi/cs
- 10.19%    5.855     34 Template:Version
-  9.89%    5.686      2 Template:Navigation_menu_2
-  7.26%    4.173      8 Template:VersionPlus
-  6.14%    3.527      2 Template:Docnav
-  6.10%    3.505      5 Template:MenuCommand
-  5.49%    3.155      1 Template:TOCright
+100.00%   68.893      1 -total
+ 19.47%   13.414      1 Template:Sketcher_Tools_navi/cs
+ 14.93%   10.283      1 Template:Userdocnavi/cs
+ 14.37%    9.899      5 Template:MenuCommand
+  7.66%    5.279      2 Template:Navigation_menu_2
+  6.84%    4.711      8 Template:VersionPlus
+  6.67%    4.596      1 Template:PropertyView
+  6.18%    4.257     34 Template:Version
+  4.30%    2.962      2 Template:Docnav
+  3.12%    2.150     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118113539 and revision id 1740302. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118113701 and revision id 1740310. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
