Updated page TechDraw ExtensionLineParallel/fr

--- a/wiki/fr/TechDraw_ExtensionLineParallel.html
+++ b/wiki/fr/TechDraw_ExtensionLineParallel.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionLineParallel/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionLineParallel&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionLineParallel.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Erg&auml;nzungParalleleLinie (56% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionLineParallel.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungParalleleLinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionLineParallel.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionLineParallel (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../pl/TechDraw_ExtensionLineParallel.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Rozszerzenie Dodaj pomocnicz&#261; lini&#281; r&oacute;wnoleg&#322;&#261; (56% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/TechDraw_ExtensionLineParallel.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj pomocnicz&#261; lini&#281; r&oacute;wnoleg&#322;&#261; (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a></div>
@@ -12,7 +12,6 @@
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; Ligne parall&egrave;le cosm&eacute;tique
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Ligne parall&egrave;le cosm&eacute;tique
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Ligne parall&egrave;le</b> ajoute une ligne cosm&eacute;tique parall&egrave;le &agrave; une autre ligne passant par un sommet.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLineParallelExample.png&amp;filetimestamp=20211109160407&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLineParallelExample.png" decoding="async" width="250" height="115" class="mw-file-element" data-file-width="711" data-file-height="326"></a></span>
@@ -119,34 +117,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111112749
+Cached time: 20260118113814
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 350/1000000
+CPU time usage: 0.071 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 349/1000000
 Post&#8208;expand include size: 25891/2097152 bytes
 Template argument size: 10256/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1130/5000000 bytes
+Unstrip post&#8208;expand size: 1142/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.989      1 -total
- 50.70%   11.656      1 Template:TechDraw_Tools_navi/fr
- 22.29%    5.125      2 Template:Navigation_menu_2
- 14.88%    3.420      1 Template:Userdocnavi/fr
-  9.55%    2.196      2 Template:Docnav/fr
-  8.34%    1.917      1 Template:GuiCommand/fr
-  5.70%    1.311      1 Template:Caption
-  4.77%    1.097      1 Template:Button
-  4.00%    0.919      1 Template:MenuCommand
+100.00%   22.079      1 -total
+ 29.78%    6.575      1 Template:TechDraw_Tools_navi/fr
+ 19.52%    4.310      1 Template:Userdocnavi/fr
+ 19.25%    4.251      2 Template:Navigation_menu_2
+ 15.89%    3.508      2 Template:Docnav/fr
+ 11.52%    2.543      1 Template:GuiCommand/fr
+  9.73%    2.149      1 Template:Button
+  6.55%    1.446      1 Template:MenuCommand
+  4.72%    1.043      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260111112749 and revision id 1733373. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118113814 and revision id 1740314. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
