--- a/wiki/fr/TechDraw_ExtensionLineParallel.html
+++ b/wiki/fr/TechDraw_ExtensionLineParallel.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionLineParallel/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionLineParallel&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionLineParallel.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungParalleleLinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionLineParallel.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionLineParallel (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionLineParallel.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj pomocnicz&#261; lini&#281; r&oacute;wnoleg&#322;&#261; (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="mw-translate-fuzzy">
 <div class="docnav">
@@ -59,15 +59,13 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez une ar&ecirc;te droite pour d&eacute;terminer la direction et la longueur de la ligne.</li>
 <li>S&eacute;lectionnez un sommet pour d&eacute;terminer la position de la ligne.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLineParallel.svg&amp;filetimestamp=20240706151318&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ligne parall&egrave;le cosm&eacute;tique</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLineParallel.svg&amp;filetimestamp=20240706151318&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne parall&egrave;le cosm&eacute;tique</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLineParallel.svg&amp;filetimestamp=20240706151318&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne parall&egrave;le cosm&eacute;tique</b> du menu.</li></ul></li>
 <li>Une ligne cosm&eacute;tique est ajout&eacute;e.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="mw-translate-fuzzy">
@@ -117,34 +115,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113814
+Cached time: 20260118113856
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.135 seconds
-Preprocessor visited node count: 349/1000000
+CPU time usage: 0.064 seconds
+Real time usage: 0.095 seconds
+Preprocessor visited node count: 348/1000000
 Post&#8208;expand include size: 25891/2097152 bytes
 Template argument size: 10256/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1142/5000000 bytes
+Unstrip post&#8208;expand size: 1143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.079      1 -total
- 29.78%    6.575      1 Template:TechDraw_Tools_navi/fr
- 19.52%    4.310      1 Template:Userdocnavi/fr
- 19.25%    4.251      2 Template:Navigation_menu_2
- 15.89%    3.508      2 Template:Docnav/fr
- 11.52%    2.543      1 Template:GuiCommand/fr
-  9.73%    2.149      1 Template:Button
-  6.55%    1.446      1 Template:MenuCommand
-  4.72%    1.043      1 Template:Caption
+100.00%   20.884      1 -total
+ 33.53%    7.002      1 Template:TechDraw_Tools_navi/fr
+ 26.58%    5.551      2 Template:Navigation_menu_2
+ 20.25%    4.230      1 Template:Userdocnavi/fr
+ 11.74%    2.451      1 Template:Caption
+ 11.65%    2.433      2 Template:Docnav/fr
+  9.51%    1.986      1 Template:GuiCommand/fr
+  6.19%    1.293      1 Template:Button
+  4.63%    0.967      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118113814 and revision id 1740314. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118113856 and revision id 1740316. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
