Created page with ":* [[Image:Sketcher_CreateEllipseByCenter.svg|32px]] [[Sketcher_CreateEllipseByCenter|Elipsa ze středu]]: Vytvoří elipsu od jejího středu, koncového bodu jedné z jejích os a bodu podél elipsy. {{Version|1.0}}: Nebo z obou konců jedné z jejích os a bodu na elipse."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -131,9 +131,7 @@
 <ul><li><span id="Sketcher_CompCreateConic"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateCircle.svg&amp;filetimestamp=20240101085932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it kruh/elipsu:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateCircle.svg&amp;filetimestamp=20240101085932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Kruh ze st&#345;edu</a>: Vytvo&#345;&iacute; kruh podle jeho st&#345;edu a bodu na kru&#382;nici. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Nebo ze t&#345;&iacute; bod&#367; pod&eacute;l kru&#382;nice.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Create3PointCircle.svg&amp;filetimestamp=20240101085716&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Create3PointCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Create3PointCircle.html" title="Sketcher Create3PointCircle">Kruh ze 3 bod&#367;</a>: Vytvo&#345;&iacute; kruh ze t&#345;&iacute; bod&#367; le&#382;&iacute;c&iacute;ch na kru&#382;nici. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Kruh ze st&#345;edu</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateEllipseByCenter.svg&amp;filetimestamp=20240101090023&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateEllipseByCenter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Ellipse From Center</a>: Creates an ellipse from its center, an endpoint of one of its axes, and a point along the ellipse. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Or from both endpoints of one of its axes and a point along the ellipse.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateEllipseByCenter.svg&amp;filetimestamp=20240101090023&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateEllipseByCenter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Elipsa ze st&#345;edu</a>: Vytvo&#345;&iacute; elipsu od jej&iacute;ho st&#345;edu, koncov&eacute;ho bodu jedn&eacute; z jej&iacute;ch os a bodu pod&eacute;l elipsy. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Nebo z obou konc&#367; jedn&eacute; z jej&iacute;ch os a bodu na elipse.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateEllipseBy3Points.svg&amp;filetimestamp=20240101170343&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateEllipseBy3Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateEllipseBy3Points.html" title="Sketcher CreateEllipseBy3Points">Ellipse From 3 Points</a>: Creates an ellipse from the endpoints of one of its axes and a point along the ellipse. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: This is the same tool as <a href="../Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Ellipse From Center</a> but with a different initial mode.</li></ul></dd></dl>
 </div>
@@ -750,13 +748,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113812
+Cached time: 20260118113935
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.412 seconds
-Real time usage: 0.622 seconds
-Preprocessor visited node count: 1526/1000000
+CPU time usage: 0.432 seconds
+Real time usage: 0.788 seconds
+Preprocessor visited node count: 1525/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -766,19 +764,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.070      1 -total
- 20.23%    9.927      1 Template:Sketcher_Tools_navi/cs
- 15.02%    7.372      1 Template:Userdocnavi/cs
- 11.89%    5.833      2 Template:Navigation_menu_2
- 11.33%    5.558      1 Template:PropertyView
-  9.40%    4.613      8 Template:VersionPlus
-  6.25%    3.067     34 Template:Version
-  6.13%    3.006      2 Template:Docnav
-  5.64%    2.768     14 Template:KEY
-  5.61%    2.751      1 Template:Variable
+100.00%  106.046      1 -total
+ 23.31%   24.717      1 Template:Sketcher_Tools_navi/cs
+ 18.99%   20.139      1 Template:Userdocnavi/cs
+ 18.08%   19.176      1 Template:PropertyView
+ 10.52%   11.158      2 Template:Navigation_menu_2
+  8.38%    8.892      2 Template:Docnav
+  7.35%    7.791      1 Template:TOCright
+  5.80%    6.146      1 Template:Variable
+  5.65%    5.993     14 Template:KEY
+  4.84%    5.136      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118113811 and revision id 1740312. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118113934 and revision id 1740318. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
