--- a/wiki/fr/TechDraw_ExtensionLineParallel.html
+++ b/wiki/fr/TechDraw_ExtensionLineParallel.html
@@ -15,7 +15,7 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Ligne parall&egrave;le
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Ligne parall&egrave;le cosm&eacute;tique
 </p>
 </td></tr>
 <tr>
@@ -115,15 +115,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113856
+Cached time: 20260118114001
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.064 seconds
-Real time usage: 0.095 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.126 seconds
 Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 25891/2097152 bytes
-Template argument size: 10256/2097152 bytes
+Post&#8208;expand include size: 25915/2097152 bytes
+Template argument size: 10280/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -131,18 +131,18 @@ Unstrip post&#8208;expand size: 1143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.884      1 -total
- 33.53%    7.002      1 Template:TechDraw_Tools_navi/fr
- 26.58%    5.551      2 Template:Navigation_menu_2
- 20.25%    4.230      1 Template:Userdocnavi/fr
- 11.74%    2.451      1 Template:Caption
- 11.65%    2.433      2 Template:Docnav/fr
-  9.51%    1.986      1 Template:GuiCommand/fr
-  6.19%    1.293      1 Template:Button
-  4.63%    0.967      1 Template:MenuCommand
+100.00%   28.278      1 -total
+ 28.35%    8.018      1 Template:TechDraw_Tools_navi/fr
+ 17.84%    5.046      2 Template:Navigation_menu_2
+ 16.89%    4.775      1 Template:Userdocnavi/fr
+ 13.83%    3.910      1 Template:GuiCommand/fr
+ 12.67%    3.583      2 Template:Docnav/fr
+  8.95%    2.531      1 Template:Caption
+  8.64%    2.442      1 Template:MenuCommand
+  7.96%    2.251      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118113856 and revision id 1740316. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118114001 and revision id 1740320. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
