--- a/wiki/fr/TechDraw_ExtensionLineParallel.html
+++ b/wiki/fr/TechDraw_ExtensionLineParallel.html
@@ -52,7 +52,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Ligne parall&egrave;le</b> ajoute une ligne cosm&eacute;tique parall&egrave;le &agrave; une autre ligne passant par un sommet.
+<p>L'outil <b>TechDraw Ligne parall&egrave;le cosm&eacute;tique</b> ajoute une ligne cosm&eacute;tique parall&egrave;le &agrave; une autre ligne passant par un sommet.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLineParallelExample.png&amp;filetimestamp=20211109160407&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLineParallelExample.png" decoding="async" width="250" height="115" class="mw-file-element" data-file-width="711" data-file-height="326"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, une ligne parall&egrave;le cosm&eacute;tique a &eacute;t&eacute; ajout&eacute;e</p>
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114001
+Cached time: 20260118114006
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.126 seconds
+CPU time usage: 0.077 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 348/1000000
 Post&#8208;expand include size: 25915/2097152 bytes
 Template argument size: 10280/2097152 bytes
@@ -131,18 +131,18 @@ Unstrip post&#8208;expand size: 1143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.278      1 -total
- 28.35%    8.018      1 Template:TechDraw_Tools_navi/fr
- 17.84%    5.046      2 Template:Navigation_menu_2
- 16.89%    4.775      1 Template:Userdocnavi/fr
- 13.83%    3.910      1 Template:GuiCommand/fr
- 12.67%    3.583      2 Template:Docnav/fr
-  8.95%    2.531      1 Template:Caption
-  8.64%    2.442      1 Template:MenuCommand
-  7.96%    2.251      1 Template:Button
+100.00%   19.397      1 -total
+ 29.24%    5.671      1 Template:TechDraw_Tools_navi/fr
+ 27.20%    5.276      2 Template:Navigation_menu_2
+ 19.67%    3.815      1 Template:Userdocnavi/fr
+ 14.12%    2.738      2 Template:Docnav/fr
+ 12.32%    2.390      1 Template:GuiCommand/fr
+  7.67%    1.487      1 Template:Caption
+  7.64%    1.482      1 Template:Button
+  6.33%    1.227      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118114001 and revision id 1740320. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118114006 and revision id 1740323. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
