Updated page TechDraw ExtensionLineParallel/fr

--- a/wiki/fr/TechDraw_ExtensionLineParallel.html
+++ b/wiki/fr/TechDraw_ExtensionLineParallel.html
@@ -3,14 +3,12 @@
 <li><a href="../TechDraw_ExtensionLineParallel.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionLineParallel (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionLineParallel.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj pomocnicz&#261; lini&#281; r&oacute;wnoleg&#322;&#261; (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc cosm&eacute;tique</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
@@ -115,15 +113,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114006
+Cached time: 20260118114100
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.092 seconds
-Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 25915/2097152 bytes
-Template argument size: 10280/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.127 seconds
+Preprocessor visited node count: 347/1000000
+Post&#8208;expand include size: 25843/2097152 bytes
+Template argument size: 10232/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -131,18 +129,18 @@ Unstrip post&#8208;expand size: 1143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.397      1 -total
- 29.24%    5.671      1 Template:TechDraw_Tools_navi/fr
- 27.20%    5.276      2 Template:Navigation_menu_2
- 19.67%    3.815      1 Template:Userdocnavi/fr
- 14.12%    2.738      2 Template:Docnav/fr
- 12.32%    2.390      1 Template:GuiCommand/fr
-  7.67%    1.487      1 Template:Caption
-  7.64%    1.482      1 Template:Button
-  6.33%    1.227      1 Template:MenuCommand
+100.00%   29.527      1 -total
+ 32.09%    9.475      1 Template:TechDraw_Tools_navi/fr
+ 22.17%    6.547      2 Template:Navigation_menu_2
+ 20.61%    6.085      1 Template:Userdocnavi/fr
+ 16.95%    5.004      1 Template:GuiCommand/fr
+ 10.64%    3.142      2 Template:Docnav/fr
+  7.08%    2.091      1 Template:Caption
+  5.23%    1.543      1 Template:Button
+  4.81%    1.419      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118114006 and revision id 1740323. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118114100 and revision id 1740325. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
