--- a/wiki/fr/TechDraw_ExtensionLineParallel.html
+++ b/wiki/fr/TechDraw_ExtensionLineParallel.html
@@ -5,7 +5,7 @@
 <li><a href="../pl/TechDraw_ExtensionLineParallel.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj pomocnicz&#261; lini&#281; r&oacute;wnoleg&#322;&#261; (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc cosm&eacute;tique</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire cosm&eacute;tique</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -68,7 +68,7 @@
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc cosm&eacute;tique</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire cosm&eacute;tique</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -111,15 +111,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114107
+Cached time: 20260118114134
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.149 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.137 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25771/2097152 bytes
-Template argument size: 10184/2097152 bytes
+Post&#8208;expand include size: 25843/2097152 bytes
+Template argument size: 10232/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -127,18 +127,18 @@ Unstrip post&#8208;expand size: 1147/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.097      1 -total
- 34.43%   17.591      1 Template:TechDraw_Tools_navi/fr
- 32.73%   16.724      1 Template:GuiCommand/fr
- 16.62%    8.495      2 Template:Navigation_menu_2
- 12.12%    6.192      1 Template:Userdocnavi/fr
-  5.48%    2.799      2 Template:Docnav/fr
-  4.94%    2.525      1 Template:Caption
-  2.94%    1.501      1 Template:MenuCommand
-  2.50%    1.276      1 Template:Button
+100.00%   35.810      1 -total
+ 32.41%   11.607      1 Template:TechDraw_Tools_navi/fr
+ 17.21%    6.164      2 Template:Navigation_menu_2
+ 17.07%    6.111      1 Template:Userdocnavi/fr
+ 15.66%    5.609      1 Template:GuiCommand/fr
+ 11.48%    4.112      1 Template:Caption
+  9.40%    3.365      2 Template:Docnav/fr
+  6.19%    2.216      1 Template:Button
+  5.51%    1.973      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118114107 and revision id 1740329. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277801-0!canonical and timestamp 20260118114134 and revision id 1740333. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
