Created page with ":* [[Image:Sketcher_CreateSquare.svg|32px]] [[Sketcher_CreateSquare|Čtverec]]: Vytvoří čtverec. Idem."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -139,9 +139,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateOblong.svg&amp;filetimestamp=20240101090600&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateOblong.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Zaoblen&yacute; obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; zaoblen&yacute; obd&eacute;ln&iacute;k. Idem.</li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompCreateRegularPolygon"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it mnoho&uacute;heln&iacute;k:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateTriangle.svg&amp;filetimestamp=20240101091254&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateTriangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Troj&uacute;heln&iacute;k</a>: vytvo&#345;&iacute; rovnostrann&yacute; troj&uacute;heln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Mnoho&uacute;heln&iacute;k</a>, ale s p&#345;ednastaven&yacute;m po&#269;tem stran na konkr&eacute;tn&iacute; hodnotu.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSquare.svg&amp;filetimestamp=20240101091203&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSquare.html" title="Sketcher CreateSquare">Square</a>: Creates a square. Idem.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSquare.svg&amp;filetimestamp=20240101091203&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSquare.html" title="Sketcher CreateSquare">&#268;tverec</a>: Vytvo&#345;&iacute; &#269;tverec. Idem.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePentagon.svg&amp;filetimestamp=20240101090711&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePentagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePentagon.html" title="Sketcher CreatePentagon">Pentagon</a>: Creates a pentagon. Idem.</li></ul></dd></dl>
 </div>
@@ -734,13 +732,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114740
+Cached time: 20260118114816
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.489 seconds
-Real time usage: 0.738 seconds
-Preprocessor visited node count: 1518/1000000
+CPU time usage: 0.443 seconds
+Real time usage: 0.657 seconds
+Preprocessor visited node count: 1517/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -750,19 +748,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.802      1 -total
- 22.92%   13.251      1 Template:Sketcher_Tools_navi/cs
- 14.56%    8.417      1 Template:PropertyView
- 12.25%    7.079      2 Template:Navigation_menu_2
- 11.28%    6.519      1 Template:Userdocnavi/cs
-  8.14%    4.704      2 Template:Docnav
-  7.73%    4.468      1 Template:Variable
-  6.33%    3.660     34 Template:Version
-  5.97%    3.453     14 Template:KEY
-  5.96%    3.443      6 Template:Caption
+100.00%   43.812      1 -total
+ 21.40%    9.377      1 Template:Userdocnavi/cs
+ 19.78%    8.667      1 Template:Sketcher_Tools_navi/cs
+ 15.42%    6.757      2 Template:Navigation_menu_2
+  9.46%    4.143      1 Template:PropertyView
+  6.81%    2.985     34 Template:Version
+  6.43%    2.819      2 Template:Docnav
+  5.56%    2.438      1 Template:Variable
+  5.10%    2.234      6 Template:Caption
+  4.65%    2.037      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114739 and revision id 1740345. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114815 and revision id 1740347. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
