--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -140,9 +140,7 @@
 <ul><li><span id="Sketcher_CompCreateRegularPolygon"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it mnoho&uacute;heln&iacute;k:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateTriangle.svg&amp;filetimestamp=20240101091254&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateTriangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Troj&uacute;heln&iacute;k</a>: vytvo&#345;&iacute; rovnostrann&yacute; troj&uacute;heln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Mnoho&uacute;heln&iacute;k</a>, ale s p&#345;ednastaven&yacute;m po&#269;tem stran na konkr&eacute;tn&iacute; hodnotu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSquare.svg&amp;filetimestamp=20240101091203&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSquare.html" title="Sketcher CreateSquare">&#268;tverec</a>: Vytvo&#345;&iacute; &#269;tverec. Idem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePentagon.svg&amp;filetimestamp=20240101090711&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePentagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePentagon.html" title="Sketcher CreatePentagon">Pentagon</a>: Creates a pentagon. Idem.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePentagon.svg&amp;filetimestamp=20240101090711&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePentagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePentagon.html" title="Sketcher CreatePentagon">P&#283;ti&uacute;heln&iacute;k</a>: Vytvo&#345;&iacute; p&#283;ti&uacute;heln&iacute;k. Idem.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateHexagon.html" title="Sketcher CreateHexagon">Hexagon</a>: Creates a hexagon. Idem.</li></ul></dd></dl>
 </div>
@@ -732,13 +730,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114816
+Cached time: 20260118114903
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.443 seconds
-Real time usage: 0.657 seconds
-Preprocessor visited node count: 1517/1000000
+CPU time usage: 0.423 seconds
+Real time usage: 0.605 seconds
+Preprocessor visited node count: 1516/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -748,19 +746,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.812      1 -total
- 21.40%    9.377      1 Template:Userdocnavi/cs
- 19.78%    8.667      1 Template:Sketcher_Tools_navi/cs
- 15.42%    6.757      2 Template:Navigation_menu_2
-  9.46%    4.143      1 Template:PropertyView
-  6.81%    2.985     34 Template:Version
-  6.43%    2.819      2 Template:Docnav
-  5.56%    2.438      1 Template:Variable
-  5.10%    2.234      6 Template:Caption
-  4.65%    2.037      1 Template:TOCright
+100.00%   43.237      1 -total
+ 21.38%    9.242      1 Template:Sketcher_Tools_navi/cs
+ 14.16%    6.122      2 Template:Navigation_menu_2
+ 13.44%    5.812      1 Template:Userdocnavi/cs
+ 10.07%    4.356      1 Template:PropertyView
+  8.03%    3.474     34 Template:Version
+  6.69%    2.892      8 Template:VersionPlus
+  5.87%    2.539      2 Template:Docnav
+  5.77%    2.495      6 Template:Caption
+  5.61%    2.425      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114815 and revision id 1740347. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114902 and revision id 1740349. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
