Created page with "* <span id="Sketcher_CompCreateBSpline">[[Image:Sketcher_CreateBSpline.svg|x32px]][[Image:Toolbar_flyout_arrow_blue_background.svg|x32px]] Vytvořit B-Splajn:</span><!--Do not edit span id: the Sketcher_CompCreateBSpline pages redirect here-->"

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -148,9 +148,7 @@
 <ul><li><span id="Sketcher_CompSlot"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSlot.svg&amp;filetimestamp=20240101091129&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it dr&aacute;&#382;ku:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSlot.svg&amp;filetimestamp=20240101091129&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSlot.html" title="Sketcher CreateSlot">Dr&aacute;&#382;ka</a>: Vytvo&#345;&iacute; dr&aacute;&#382;ku.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcSlot.svg&amp;filetimestamp=20240101085806&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcSlot.html" title="Sketcher CreateArcSlot">Obloukov&aacute; dr&aacute;&#382;ka</a>: Vytvo&#345;&iacute; obloukovou dr&aacute;&#382;ku. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="Sketcher_CompCreateBSpline"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSpline.svg&amp;filetimestamp=20240101085839&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create B-Spline:</span></li></ul>
-</div>
+<ul><li><span id="Sketcher_CompCreateBSpline"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSpline.svg&amp;filetimestamp=20240101085839&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it B-Splajn:</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSpline.svg&amp;filetimestamp=20240101085839&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Spline</a>: Creates a B-spline curve from control points. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Or from knot points.</li></ul></dd></dl>
 </div>
@@ -716,13 +714,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118115401
+Cached time: 20260118115442
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.461 seconds
-Real time usage: 0.657 seconds
-Preprocessor visited node count: 1509/1000000
+CPU time usage: 0.408 seconds
+Real time usage: 0.648 seconds
+Preprocessor visited node count: 1508/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -732,19 +730,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.734      1 -total
- 18.12%    7.018      1 Template:Sketcher_Tools_navi/cs
- 12.52%    4.850      6 Template:Caption
- 12.19%    4.721      1 Template:PropertyView
- 11.55%    4.474      1 Template:Userdocnavi/cs
- 11.21%    4.343      2 Template:Navigation_menu_2
-  7.80%    3.021      2 Template:Docnav
-  6.64%    2.573     34 Template:Version
-  5.47%    2.117      1 Template:Variable
-  5.37%    2.080     14 Template:KEY
+100.00%   47.171      1 -total
+ 20.83%    9.824      1 Template:Sketcher_Tools_navi/cs
+ 14.58%    6.877      1 Template:Userdocnavi/cs
+ 14.34%    6.762      2 Template:Navigation_menu_2
+  8.34%    3.932      1 Template:PropertyView
+  7.78%    3.669     34 Template:Version
+  7.55%    3.561      2 Template:Docnav
+  6.46%    3.045      1 Template:TOCright
+  5.94%    2.800     14 Template:KEY
+  5.86%    2.766      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115400 and revision id 1740363. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115442 and revision id 1740365. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
